--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,17 @@ before_install:
 
 
 script:
-- docker run -e CI=true shannerterman/docker-react npm run test
+  - docker run -e CI=true shannerterman/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-725177412300"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
